@@ -1,6 +1,5 @@
 TODO
 ====
-3. Add DESCRIPTION section to doc.
 4.
 
 Applied
@@ -10,3 +9,6 @@ OK [20240323] skim
 
 1. Doc
 OK [20240424] skim
+
+3. Add DESCRIPTION section to doc.
+OK [20240511] skim
