@@ -1,4 +1,5 @@
 0.02
+ - Add DESCRIPTION section to doc.
  - Add link over image and title.
 
 0.01 2024-05-10T20:52:00+02:00
